[package]
name = "pppoe-sys"
version = "0.1.0"
authors = ["Istvan Ruzman <istvan@ruzman.eu>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.52"
